# bedrock-bot

./: bedrock  lint.sh  pyproject.toml  test.sh
.devcontainer/: devcontainer.json
.github/workflows/: workflow.yml
bedrock_bot/: cli.py  model.py
bedrock_bot/models/: __init__.py  claude.py
tests/: test_base_model.py  test_claude.py  test_cli.py  test_import.py  test_nova.py  test_util.py
