[tool.poetry]
name = "bedrock-bot"
version = "1.0.0"
description = ""
authors = ["Justin Dray <justin@dray.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.88"
click = "^8.1.7"
rich = "^13.7.1"

[tool.poetry.scripts]
bedrock = "bedrock_bot.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
